--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,7 @@
 </head>
 
 <body>
-  <h1>Enter the country name:</h1>
-  <input type="text" id="search-box" />
-  <ul class="country-list"></ul>
-  <div class="country-info"></div>
+  <div class="gallery"></div>
   <script src="index.js" type="module"></script>
 </body>
 
